--- a/Web UI Code/readme
+++ b/Web UI Code/readme
@@ -1,4 +1,4 @@
-*****FOR A FULL DEMO OF THE UI PLEASE VISIT: scala.eddiesmarket.net*****
+*****FOR A FULL DEMO OF THE UI RUN SCALA PROJECT ON YOU MACHINE & VISIT THE OUR WEB PAGE: <a target="_blank" href="scala.eddiesmarket.net">Team4 Demo Web UI Page</a>******
 
 Technologies Used:
 1. JQuery and other Javascript Libraries
@@ -15,5 +15,6 @@ in the database and not to compute or recalculate any values or data.
 Credit:
 Highcharts JS is the plugin used to display all the charts & graphs
 
-*****FOR A FULL DEMO OF THE UI PLEASE VISIT: scala.eddiesmarket.net*****
+*****FOR A FULL DEMO OF THE UI RUN SCALA PROJECT ON YOU MACHINE & VISIT THE OUR WEB PAGE: <a target="_blank" href="scala.eddiesmarket.net">Team4 Demo Web UI Page</a>******
+
 
