--- a/Web UI Code/readme
+++ b/Web UI Code/readme
@@ -1,6 +1,7 @@
-*****FOR A FULL DEMO OF THE UI RUN SCALA PROJECT ON YOU MACHINE & VISIT THE OUR WEB PAGE: <a target="_blank" href="scala.eddiesmarket.net">Team4 Demo Web UI Page</a>******
+#Demo:
+FOR A FULL DEMO OF THE UI RUN SCALA PROJECT ON YOU MACHINE & VISIT THE OUR WEB PAGE: <a target="_blank" href="scala.eddiesmarket.net">Team4 Demo Web UI Page</a>******
 
-Technologies Used:
+#Technologies Used:
 1. JQuery and other Javascript Libraries
 2. HTML, CSS
 3. Boostrap 
@@ -8,13 +9,13 @@ Technologies Used:
 5. SQL
 6. MySQL DB
 
-Note:
+#Note:
 This UI is used just to display the result of the analysis which is stored
 in the database and not to compute or recalculate any values or data.
 
-Credit:
+#Credit:
 Highcharts JS is the plugin used to display all the charts & graphs
 
-*****FOR A FULL DEMO OF THE UI RUN SCALA PROJECT ON YOU MACHINE & VISIT THE OUR WEB PAGE: <a target="_blank" href="scala.eddiesmarket.net">Team4 Demo Web UI Page</a>******
+
 
 
